# knotwork

./: .deploy-images.env.example  .dockerignore  .env.docker.example  .gitignore  .knotwork-install.json  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  README.md  dev.sh  docker-compose.deploy.yml  docker-compose.dev-db-ports.yml  docker-compose.yml  node_modules  pyproject.toml  pytest.ini  seed.py  sitecustomize.py  tsconfig.json
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 0003_openclaw_integration_unique.py  0005_escalation_questions.py  0008_version_management.py  0011_projects_tasks.py  0011_public_link_slugs.py  0012_objective_fields.py  0012_version_public_slugs.py  0012_workspace_email.py  0013_channel_events_and_deliveries.py  0013_version_public_slugs.py  0019_rename_tasks_to_objectives.py  0020_project_description_and_objective_constraints.py  0022_project_channel_objective_slugs.py  0023_knowledge_folder_scope.py  0024_unified_participant_model.py  0026_agent_auth_challenges.py  0028_workspace_guide.py  0030_knowledge_change_actions.py  0033_workspace_member_agent_zero_role.py  0036_member_profile_status.py  36b0d7001ff8_initial.py  370b42968dd8_s6_tools_notifications.py  4d76d0df12a9_add_error_to_runs.py  85a3c3676caf_s6_notifications.py  99138170d563_s6_4_designer_chat.py  a1b2c3d4e5f6_s7_1_registered_agents.py  b2c3d4e5f6a7_s8_1_auth_invitations.py  (+13 more)
backend/knotwork/: __init__.py  config.py  database.py  main.py  participants.py
backend/scripts/: bootstrap_owner.py  export_openapi_baseline.py  import_default_workflows.py  migrate_or_stamp.py
backend/tests/: test_bulletin_channel.py  test_inbox_delivery_updates.py  test_mcp_server.py  test_member_participants.py
(+1227 files in other folders)
